--- a/style.css
+++ b/style.css
@@ -219,6 +219,11 @@ h1, h2 {
 
     /* za bolju anchor animaciju */
     transition: color 1.2s ease-out;
+
+    background-color: rgba(0, 0, 0, 0.2);
+    padding:  3px 12px;
+
+    text-shadow: 0 0 10px rgb(146, 181, 255);
 }
 h1::after, h2::after {
     content: '';
@@ -235,7 +240,7 @@ h1 {
     font-size: 4rem;
 }
 section {
-    margin-bottom: 90px;
+    padding-bottom: 90px;
 }
 h2 {
     font-size: 3rem;
@@ -349,17 +354,20 @@ footer .cont {
 }
 
 ul {
+    padding-top: 0.8rem;
     padding-left: 30px;
 }
 
 li {
     list-style: none;
     line-height: 1.5rem;
+    margin-bottom: 0.4rem;
 }
 
 li:has(b) {
     font-size: 1.15rem;
     margin: 3px 0;
+    margin-bottom: 0.4rem;
 }
 
 li:has(b)::before {
@@ -387,6 +395,9 @@ li:not(:has(b)) {
 
 p {
     line-height: 1.5rem;
+
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 10px;
 }
 
 .holder i {
@@ -445,7 +456,7 @@ p {
     
     position: relative;
     
-    background-image: url("images/sun.png");
+    background-image: url("images/moon.png");
     background-size: contain;
     background-size: 30px;
     background-repeat: no-repeat;
@@ -453,6 +464,8 @@ p {
     
     border: 1px solid black;
     scale: 0.8;
+
+    left: 34px;
 }
 
 header .infoBox {
@@ -479,6 +492,9 @@ header .infoBox img:hover {
 @media (max-width: 980px) {
     #nav2 {
         display: flex;
+    }
+    #nav2 * {
+        font-size: 0.8rem !important;
     }
     .navOpener {
         display: none;
